--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -57,7 +57,14 @@
         "aggregator": {
             "sum": "Sum",
             "mean": "Mean",
-            "count": "Count"
+            "count": "Count",
+            "median": "Median",
+            "min": "Min",
+            "max": "Max",
+            "q1": "Q1",
+            "q3": "Q3",
+            "stdev": "Standard Deviation",
+            "variance": "Variance"
         },
         "filter_type": {
             "one_of": "One-Of",
