--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -57,7 +57,14 @@
         "aggregator": {
             "sum": "求和",
             "mean": "平均值",
-            "count": "计数"
+            "count": "计数",
+            "median": "中位数",
+            "min": "最小值",
+            "max": "最大值",
+            "q1": "Q1",
+            "q3": "Q3",
+            "stdev": "标准差",
+            "variance": "方差"
         },
         "filter_type": {
             "one_of": "按值筛选",
