--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -157,5 +157,19 @@
             "unselect_all": "全部取消",
             "reverse": "选择反向"
         }
+    },
+    "explain": {
+        "lg_than": "大于",
+        "sm_than": "小于",
+        "expection": "期望值",
+        "unrecognized": "未识别",
+        "score": "得分",
+        "contains": "包含",
+        "reason": {
+            "selection_dim_distribution": "维度线索",
+            "selection_mea_distribution": "度量线索",
+            "children_major_factor": "子节点主要因素",
+            "children_outlier": "子节点异常"
+        }
     }
 }
