--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -161,13 +161,13 @@
     "explain": {
         "lg_than": "greater than",
         "sm_than": "less than",
-        "expection": "Expectation",
+        "expection": "expectation",
         "unrecognized": "Unrecognized",
         "score": "score",
         "contains": "contains",
         "reason": {
-            "selection_dim_distribution": "clues in other dimensions",
-            "selection_mea_distribution": "clues in other measures",
+            "selection_dim_distribution": "dimensions' clues",
+            "selection_mea_distribution": "measures' clues",
             "children_major_factor": "major factor",
             "children_outlier": "outlier"
         }
