--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -88,7 +88,7 @@
         },
         "dialog": {
             "create_data_source": "New Data Source",
-            "data_types": "Choose Import Methods",
+            "data_types": "Choose Data Source Type",
             "text_file_data": "Open Local Text File",
             "public_data": "Use Public Dataset",
             "data_source_type": "Data Source Type: [{{sourceType}}]",
