--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -171,5 +171,9 @@
             "children_major_factor": "major factor",
             "children_outlier": "outlier"
         }
+    },
+    "primary_menu_key": {
+        "chart": "Chart",
+        "dashboard": "Dashboard"
     }
 }
