--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -88,10 +88,10 @@
         },
         "dialog": {
             "create_data_source": "New Data Source",
-            "data_types": "Choose Data Source Type",
-            "text_file_data": "Open Local Text File",
-            "public_data": "Use Public Dataset",
-            "data_source_type": "Data Source Type: [{{sourceType}}]",
+            "data_types": "DataSource Type",
+            "text_file_data": "Local Files",
+            "public_data": "Public Datasets",
+            "data_source_type": "Data Source Type: {{sourceType}}",
             "file": {
                 "open": "Open...",
                 "submit": "Submit",
