--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -89,9 +89,9 @@
         "dialog": {
             "create_data_source": "创建数据源",
             "data_types": "选择类型",
-            "text_file_data": "从文件中导入",
+            "text_file_data": "导入文件",
             "public_data": "公共数据集",
-            "data_source_type": "数据源类型：[{{sourceType}}]",
+            "data_source_type": "数据源类型：{{sourceType}}",
             "file": {
                 "open": "打开文件...",
                 "submit": "确认",
