--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -167,7 +167,9 @@
         "btn": {
             "select_all": "全部选中",
             "unselect_all": "全部取消",
-            "reverse": "选择反向"
+            "reverse": "选择反向",
+            "confirm": "确认",
+            "cancel": "取消"
         }
     },
     "explain": {
@@ -187,6 +189,7 @@
     "actions": {
         "prev": "向前",
         "next": "向后",
-        "drop_field": "拖拽字段至此"
+        "drop_field": "拖拽字段至此",
+        "confirm": "确认"
     }
 }
