feat: remove vi and explains

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -58,7 +58,8 @@
             "shape": "Shape",
             "theta": "Angle",
             "radius": "Radius",
-            "filters": "Filters"
+            "filters": "Filters",
+            "details": "Details"
         },
         "aggregator": {
             "sum": "Sum",
