--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -58,7 +58,8 @@
             "shape": "形状",
             "theta": "角度",
             "radius": "半径",
-            "filters": "筛选器"
+            "filters": "筛选器",
+            "details": "信息"
         },
         "aggregator": {
             "sum": "求和",
