feat(render): fold transform
Co-Authored-By: kyusho <antoineyang99@gmail.com>

--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -1,6 +1,8 @@
 {
     "constant": {
         "row_count": "行数",
+        "mea_key": "度量名称",
+        "mea_val": "度量值",
         "analytic_type": {
             "dimension": "维度",
             "measure": "度量"
