--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -1,6 +1,8 @@
 {
     "constant": {
         "row_count": "Row count",
+        "mea_key": "Measure name",
+        "mea_val": "Measure value",
         "analytic_type": {
             "dimension": "dimension",
             "measure": "measure"
