--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -23,7 +23,8 @@
         "tick": "棒線図",
         "rect": "長方形",
         "arc": "アーク",
-        "boxplot": "ボックスプロット"
+        "boxplot": "ボックスプロット",
+        "table": "表"
       },
       "stack_mode": {
         "__enum__": "スタックモード",
