--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -147,7 +147,9 @@
                     "descending": "降順に並べ替える",
                     "transpose": "転置",
                     "export_chart": "エクスポート",
-                    "export_chart_as": "{{type}}としてエクスポート"
+                    "export_chart_as": "{{type}}としてエクスポート",
+                    "export_code": "コードをエクスポート",
+                    "config": "設定"
                 },
                 "size": "サイズ変更",
                 "size_setting": {
