add a separate field to put measures for the table

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -68,7 +68,8 @@
             "radius": "Radius",
             "filters": "Filters",
             "details": "Details",
-            "text": "Text"
+            "text": "Text",
+            "table_values": "Values"
         },
         "aggregator": {
             "sum": "Sum",
