feat(): customize toolbar settings
Co-Authored-By: kyusho <antoineyang99@gmail.com>

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -148,7 +148,8 @@
                     "descending": "Sort in Descending Order",
                     "transpose": "Transpose",
                     "export_chart": "Export",
-                    "export_chart_as": "Export as {{type}}"
+                    "export_chart_as": "Export as {{type}}",
+                    "export_code": "Export Code"
                 },
                 "size": "Resize",
                 "size_setting": {
