feat: show table summary
Co-Authored-By: yyubruce <33870780+bruceshark@users.noreply.github.com>

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -155,6 +155,9 @@
                 "size_setting": {
                     "width": "Width",
                     "height": "Height"
+                },
+                "table": {
+                    "summary": "Show summary"
                 }
             },
             "DatasetFields": {
