--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -154,6 +154,9 @@
                 "size_setting": {
                     "width": "幅",
                     "height": "高さ"
+                },
+                "table": {
+                    "summary": "サマリを表示"
                 }
             },
             "DatasetFields": {
