--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -32,7 +32,13 @@
             "boxplot": "统计箱",
             "table": "表格",
             "text": "文本",
-            "map": "地图"
+            "poi": "兴趣点",
+            "geoshape": "地理形状"
+        },
+        "coord_system": {
+            "__enum__": "坐标系统",
+            "generic": "通用",
+            "geographic": "地理"
         },
         "layout_type": {
             "__enum__": "尺寸模式",
@@ -71,7 +77,8 @@
             "details": "信息",
             "text": "文本",
             "longitude": "经度",
-            "latitude": "纬度"
+            "latitude": "纬度",
+            "geoId": "地理 ID"
         },
         "aggregator": {
             "sum": "求和",
