--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -5,7 +5,16 @@
         "timeFormat": "時間の形式",
         "normalizedNumberFormat": "正規化された数字の形式",
         "background": "背景",
-        "color": "カラー"
+        "independence": "独立性",
+        "color": "カラー",
+        "x": "x軸",
+        "y": "y軸",
+        "opacity": "不透明度",
+        "size": "大きさ",
+        "shape": "形状",
+        "zeroScale": "ゼロ目盛",
+        "formatGuidesDocs": "フォーマットガイド",
+        "readHere": "ここを読む"
     },
     "constant": {
         "row_count": "行数",
