--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -5,7 +5,16 @@
         "timeFormat": "时间格式",
         "normalizedNumberFormat": "标准化数字格式",
         "background": "背景色",
-        "color": "颜色"
+        "color": "颜色",
+        "independence": "独立性",
+        "x": "x轴",
+        "y": "y轴",
+        "opacity": "不透明度",
+        "shape": "形状",
+        "size": "大小",
+        "zeroScale": "零刻度",
+        "formatGuidesDocs": "格式指南",
+        "readHere": "阅读此处"
     },
     "constant": {
         "row_count": "行数",
