feat: choropleth renderer
Co-Authored-By: kyusho <antoineyang99@gmail.com>

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -33,7 +33,7 @@
             "table": "Table",
             "text": "Text",
             "poi": "POI",
-            "geoshape": "Geo Shape"
+            "choropleth": "Choropleth"
         },
         "coord_system": {
             "__enum__": "Coordinate System",
