feat: geojson config
Co-Authored-By: kyusho <antoineyang99@gmail.com>

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -165,6 +165,15 @@
                 "size_setting": {
                     "width": "Width",
                     "height": "Height"
+                },
+                "geojson": "GeoJSON Configuration",
+                "geojson_settings": {
+                    "geoKey": "Feature ID",
+                    "jsonInput": "GeoJSON",
+                    "jsonInputPlaceholder": "Paste GeoJSON here",
+                    "href": "GeoJSON URL",
+                    "hrefPlaceholder": "Enter GeoJSON URL",
+                    "load": "Load"
                 }
             },
             "DatasetFields": {
