feat: specify topojson object key for generating geojson
Co-Authored-By: kyusho <antoineyang99@gmail.com>

--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -172,6 +172,7 @@
                     "format": "Format",
                     "geojson": "GeoJSON",
                     "topojson": "TopoJSON",
+                    "objectKey": "Extract Feature Key",
                     "jsonInputPlaceholder": "Paste {{format}} here",
                     "href": "{{format}} URL",
                     "hrefPlaceholder": "Enter {{format}} URL",
