--- a/packages/graphic-walker/src/locales/zh-CN.json
+++ b/packages/graphic-walker/src/locales/zh-CN.json
@@ -172,6 +172,7 @@
                     "format": "数据格式",
                     "geojson": "GeoJSON",
                     "topojson": "TopoJSON",
+                    "objectKey": "提取要素键",
                     "jsonInputPlaceholder": "在此粘贴 {{format}}",
                     "href": "{{format}} URL",
                     "hrefPlaceholder": "输入在线资源地址",
