--- a/packages/graphic-walker/src/locales/en-US.json
+++ b/packages/graphic-walker/src/locales/en-US.json
@@ -15,6 +15,8 @@
     },
     "constant": {
         "row_count": "Row count",
+        "mea_key": "Measure name",
+        "mea_val": "Measure value",
         "analytic_type": {
             "dimension": "dimension",
             "measure": "measure"
