--- a/packages/graphic-walker/src/locales/ja-JP.json
+++ b/packages/graphic-walker/src/locales/ja-JP.json
@@ -15,6 +15,8 @@
     },
     "constant": {
         "row_count": "行数",
+        "dim_key": "名",
+        "dim_val": "値",
         "analytic_type": {
             "dimension": "次元",
             "measure": "尺度"
